fix(theme): fix large page truncated in router

--- a/packages/theme/styles/app/router.less
+++ b/packages/theme/styles/app/router.less
@@ -3,6 +3,6 @@
 app-layout router-outlet + * {
     display: block;
     animation-duration: @router-animation-duration;
-    animation-fill-mode: both;
+    // animation-fill-mode: both;
 	animation-name: @router-animation-name; // fadeIn;
 }
